syntax = "proto3";

import "google/protobuf/timestamp.proto";

package ValkyrieFinancial.Protos;

option csharp_namespace="ValkyrieFinancial.Protos";


service TransactionsService {
  rpc AddTransaction(G_AddTransactionRequest) returns (G_AddTransactionResponse) {}
  rpc GetTransactions(G_GetTransactionRequest) returns (G_GetTransactionResponse) {}
  rpc GetDetails(G_DetailsRequest) returns (G_DetailsResponse) {}
}

message G_DetailsRequest{
  google.protobuf.Timestamp StartDate = 1;
  google.protobuf.Timestamp EndDate = 2;
}

message G_DetailsResponse{
  oneof Response{
    G_DetailsSuccess Success = 1;
    G_DetailsFailure Failure = 2;
  }
}

message G_DetailsSuccess{
  double Balance = 1;
  repeated G_Transaction Transactions = 2;
  google.protobuf.Timestamp StartDate = 3;
  google.protobuf.Timestamp EndDate = 4;
}
message G_DetailsFailure{
  string Reason = 1;
}

message G_Transaction{
  int32 Oid = 1;
  double Amount = 2;
  string Description = 3;
  google.protobuf.Timestamp DateCreated = 4;
  google.protobuf.Timestamp DateTransaction = 5;
  int32 AddedByUser = 6;
  oneof Request{
    G_CreditRequest Credit = 8;
    G_DebitRequest Debit = 9;
  }
}

message G_GetTransactionRequest{
  int32 Oid = 1;
}

message G_GetTransactionResponse{
  repeated G_Transaction Transactions = 1;
}

message G_AddTransactionRequest{
    G_Transaction Transaction = 1;
}

message G_CreditRequest{
  string Category = 1;
}

message G_DebitRequest{
  string Category = 1;
}

message G_AddTransactionResponse{
  oneof Response{
    G_TransactionSuccessResponse Success = 1;
    G_TransactionFailureResponse Failure = 2;
  }
}

message G_TransactionSuccessResponse{
  G_Transaction Transaction = 1;
}

message G_TransactionFailureResponse{
  string Reason = 1;
}